/**
 * Licensed to the Apache Software Foundation (ASF) under one
 * or more contributor license agreements.  See the NOTICE file
 * distributed with this work for additional information
 * regarding copyright ownership.  The ASF licenses this file
 * to you under the Apache License, Version 2.0 (the
 * "License"); you may not use this file except in compliance
 * with the License.  You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

option java_package = "org.apache.tajo.storage.elasticsearch";
option java_outer_classname = "StorageFragmentProtos";
option optimize_for = SPEED;
option java_generic_services = false;
option java_generate_equals_and_hash = true;

import "CatalogProtos.proto";

message ElasticsearchFragmentProto {
  required string tableName = 1;
  required string indexName = 2;
  required string indexType = 3;
  required string nodes = 4;
  required int32 shardId = 5;
  required int32 offset = 6;
  required int32 fetchSize = 7;
  required int64 length = 8;
}